Fixed text too wide in IE.

--- a/web/css/screen.css
+++ b/web/css/screen.css
@@ -127,7 +127,7 @@ a:focus, a:active {
 
 
 #exif td.tag {
-    padding-right       :   3em;
+    padding-right       :   1.5em;
     font-weight         :   bold;
 }
 
